maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:81: error: not found: value caseMarquees
    caseMarquees += marqueCases(poidsCourant)
    ^